# rsl_panoptic

./: .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_ZOO.md  README.md  pre-commit-config.yaml
panoptic_models/: CMakeLists.txt  README.md  package.xml  setup.py
panoptic_models/panoptic_models/: PanopticNets.py
panoptic_models/panoptic_models/config/: __init__.py  general_config.py  labels_info.py  params_data.py
panoptic_models/panoptic_models/data/: README.md  construction_site-v8.0.json  prepare_dataset.sh  register_datasets.py
panoptic_models/panoptic_models/deeplab2/: README.md  common.py  config_pb2.py  dataset_pb2.py  evaluator_pb2.py  infer.py  model_pb2.py  trainer_pb2.py
panoptic_models/panoptic_models/deeplab2/configs/: resnet50_os32.textproto
panoptic_models/panoptic_models/deeplab2/data/: build_coco_data2.py  coco_constants2.py  dataset.py  mv_images.py  process_meta.py  select_files.py
panoptic_models/panoptic_models/deeplab2/model/: __init__.py  backbone.py  builder.py  builder_test.py  deeplab.py  deeplab_test.py  test_utils.py  test_utils_test.py  utils.py  utils_test.py
panoptic_models/panoptic_models/deeplab2/utils/: evaluator.py  panoptic_coco_reduced_categories.json  vis_coco.py  vis_coco_reduced.py
panoptic_models/panoptic_models/detr/: README.md  engine.py  infer.py  main.py
panoptic_models/panoptic_models/detr/configs/: config.py  config.yaml  sweep.yaml
panoptic_models/panoptic_models/detr/datasets/: __init__.py  build_dataset.py  coco.py  coco_eval.py  coco_panoptic.py  construction_site.py  transforms.py
panoptic_models/panoptic_models/detr/models/: backbone.py  detr.py  matcher.py  position_encoding.py  segmentation.py
panoptic_models/panoptic_models/detr/util/: box_ops.py  panoptic_eval.py  plot_utils.py
panoptic_models/panoptic_models/mask2former/: README.md  setup.py
panoptic_models/panoptic_models/mask2former/m2f_deploy/: README.md  m2f_demo.py  m2f_eval.py  m2f_eval_multi_model.py  m2f_train.py
panoptic_models/panoptic_models/mask2former/utils/: eval_metrics.py  logger.py  recursion_search.py  wandb_writer.py
panoptic_models/panoptic_models/utils/coco/: README.md  coco_constants2.py  download_coco.sh  mv_images.py  process_meta.py  select_files.py
panoptic_models/panoptic_models/utils/rosbag/: README.md  rosbag_frame_extractor.py  rosbag_rotate_frame.py
panoptic_models/panoptic_models/utils/segment_ai/: README.md  reduced_dataset.py  segments_convert_to_coco_format.py  segments_download_data.py  visualize_ground_truth.py
ros/panoptic_ros/: CMakeLists.txt  package.xml
ros/panoptic_ros/panoptic_ros/: estimator_node.py
ros/panoptic_ros/rviz/: viz.rviz
ros/panoptic_ros/test/: test_stream_node.py  test_streamer_node.launch
(+101 files in other folders)
