<?xml version="1.0"?>
<package format="2">
  <name>panoptic_models</name>
  <version>0.0.0</version>
  <description>The panoptic_ros package</description>

  <maintainer email="simfei@todo.todo">simfei</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
